rendered/envs/friclu/karma/deployment-karma.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: karma
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: karma
    helm.sh/chart: karma-2.11.0
  name: karma
  namespace: karma
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: karma
      app.kubernetes.io/name: karma
  template:
    metadata:
      annotations:
        checksum/config: 2e34bf4cb41f09f89581ea5e242c472f80514e1f27d5eb911d92bff14533aa8d
      labels:
        app.kubernetes.io/instance: karma
        app.kubernetes.io/name: karma
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: CONFIG_FILE
              value: /etc/karma/karma.conf
          image: ghcr.io/prymitive/karma:v0.121
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          name: karma
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 2000
          volumeMounts:
            - mountPath: /etc/karma
              name: karma-config
      serviceAccountName: karma
      volumes:
        - configMap:
            name: karma-config
          name: karma-config
