rendered/envs/friclu/karma/service-karma.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/instance: karma
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: karma
    helm.sh/chart: karma-2.11.0
  name: karma
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: karma
    app.kubernetes.io/name: karma
  type: ClusterIP
