rendered/envs/friclu/karma/ingress-karma.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: karma
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: karma
    helm.sh/chart: karma-2.11.0
  name: karma
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: karma.duchardt.net
      http:
        paths:
          - backend:
              service:
                name: karma
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
